@@ -266,6 +266,31 @@ class MiniCluster(config: Map[String, String]) extends Cluster with MiniClusterU
     filtered.mkString(File.pathSeparator)
   }
 
+  private def extraJavaTestArgs: Seq[String] = {
+    Option(System.getProperty("extraJavaTestArgs"))
+      .map(_.split("\\s+").toSeq).getOrElse(Nil)
+  }
+
+  // Java 17+ module options required for Spark
+  private val java17ModuleOptions: String = Seq(
+    "-XX:+IgnoreUnrecognizedVMOptions",
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.base/java.net=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+    "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+    "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+    "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+    "-Djdk.reflect.useDirectMethodHandle=false"
+  ).mkString(" ")
+
   override def deploy(): Unit = {
     if (_tempDir.exists()) {
       FileUtils.deleteQuietly(_tempDir)
@@ -279,15 +304,19 @@ class MiniCluster(config: Map[String, String]) extends Cluster with MiniClusterU
       "spark.ui.enabled" -> "false",
       SparkLauncher.DRIVER_MEMORY -> "512m",
       SparkLauncher.EXECUTOR_MEMORY -> "512m",
-      SparkLauncher.DRIVER_EXTRA_JAVA_OPTIONS -> "-Dtest.appender=console",
-      SparkLauncher.EXECUTOR_EXTRA_JAVA_OPTIONS -> "-Dtest.appender=console"
+      SparkLauncher.DRIVER_EXTRA_JAVA_OPTIONS ->
+        s"-Dtest.appender=console $java17ModuleOptions",
+      SparkLauncher.EXECUTOR_EXTRA_JAVA_OPTIONS ->
+        s"-Dtest.appender=console $java17ModuleOptions"
     )
     saveProperties(sparkConf, new File(_sparkConfigDir, "spark-defaults.conf"))
 
     _configDir = mkdir("hadoop-conf")
     saveProperties(config, new File(configDir, "cluster.conf"))
-    hdfs = Some(start(MiniHdfsMain.getClass, new File(configDir, "core-site.xml")))
-    yarn = Some(start(MiniYarnMain.getClass, new File(configDir, "yarn-site.xml")))
+    hdfs = Some(start(MiniHdfsMain.getClass, new File(configDir, "core-site.xml"),
+      extraJavaTestArgs))
+    yarn = Some(start(MiniYarnMain.getClass, new File(configDir, "yarn-site.xml"),
+      extraJavaTestArgs))
     runLivy()
 
     _hdfsScrathDir = fs.makeQualified(new Path("/"))
@@ -307,7 +336,7 @@ class MiniCluster(config: Map[String, String]) extends Cluster with MiniClusterU
       .map { args =>
         Seq(args, s"-Djacoco.args=$args")
       }.getOrElse(Nil)
-    val localLivy = start(MiniLivyMain.getClass, confFile, extraJavaArgs = jacocoArgs)
+    val localLivy = start(MiniLivyMain.getClass, confFile, jacocoArgs ++ extraJavaTestArgs)
 
     val props = loadProperties(confFile)
     _livyEndpoint = config.getOrElse("livyEndpoint", props("livy.server.server-url"))
